# session-doctor

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: dogfood.yml
.pi/workflows/implement-deterministic-analysis-v2-roadmap/: SKILL.md
docs/: codex-native-format-scan.json  codex-native-format-update-plan.md  codex-native-format-validation.md  deterministic-analysis-v2-plan.md  phase-1-plan.md  phase-10-plan.md  phase-10-validation.md  phase-11-plan.md  phase-11-validation.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  phase-8-plan.md  phase-8-validation.md  phase-9-plan.md  phase-9-validation.md  pre-phase-8-claude-validation.md  pre-phase-8-codex-pi-validation.md  pre-phase-8-plan.md  refactor-pr-plan.md  session-doctor-design.md
docs/implementation/deterministic-analysis-v2/: pr-09.md
docs/phase-11-report-screenshots/: README.md
docs/phase-11-trends-screenshots/: README.md
evaluation/: boundary-pilot-sources-v1.json  boundary-pilot-v1.json
src/session_doctor/: __init__.py  __main__.py  analysis_workflow.py  artifacts.py  batch_analysis.py  cli.py  cli_options.py  cli_renderers.py  config.py  constants.py  diagnostic_models.py  episode_workflow.py  evaluation_models.py  evaluation_packets.py  graph_payload.py  graph_projection.py  ids.py  ingest_workflow.py  integration_assets.py  normalization.py  normalization_workflow.py  privacy.py  report_models.py  report_payload.py  report_renderers.py  segmentation.py  semantic_foundations.py  sequence_projection.py  summary_payload.py  trend_payload.py
src/session_doctor/adapters/: __init__.py  base.py  claude.py  claude_commands.py  claude_files.py  claude_messages.py  claude_metadata.py  claude_records.py  claude_sidecars.py  claude_tools.py  claude_topology.py  codex.py  codex_commands.py  codex_files.py  codex_messages.py  codex_metadata.py  codex_records.py  codex_tools.py  common.py  errors.py  patches.py  pi.py  pi_commands.py  pi_correlation.py  pi_files.py  pi_messages.py  pi_metadata.py  pi_records.py  pi_result_heuristics.py  (+4 more)
tests/: test_adapters_base.py  test_analysis.py  test_analysis_workflow.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_codex_native_contract.py  test_codex_native_validation_contract.py  test_codex_response_commands_e2e.py  test_diagnostic_readers.py  test_episode_persistence.py  test_evaluation.py  test_graph_projection.py  test_integrations.py  test_normalization.py  test_normalization_runs.py  test_phase9_e2e.py  test_pi_adapter.py  test_release_contract.py  test_report_html.py  test_report_payload.py  test_schemas.py  test_segmentation.py  test_semantic_foundations.py  test_sequence_projection.py  test_snapshot_lifecycle.py  test_store.py  test_summary_payload.py  test_trends.py  test_trends_html.py
tests/analysis/: fixtures.py  test_classification.py  test_endings.py  test_features.py  test_repeated_failures.py  test_score_helpers.py  test_similarity.py
(+97 files in other folders)
