[project]
name = "session-doctor"
version = "0.1.0"
description = "Local-first CLI foundation for analyzing AI agent sessions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "networkx>=3.5",
    "pydantic>=2.12.0",
    "rich>=14.0.0",
    "typer>=0.21.0",
]

[project.scripts]
session-doctor = "session_doctor.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

