[project]
name = "session-doctor"
dynamic = ["version"]
description = "Local-first CLI foundation for analyzing AI agent sessions."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ramtinJ95" }]
keywords = ["agent", "codex", "claude-code", "duckdb", "session-analysis"]
dependencies = [
    "duckdb>=1.4.0",
    "pydantic>=2.12.0",
    "rich>=14.0.0",
    "typer>=0.21.0",
]

[project.scripts]
session-doctor = "session_doctor.cli:app"

[project.urls]
Repository = "https://github.com/ramtinJ95/session-doctor"
Issues = "https://github.com/ramtinJ95/session-doctor/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a23",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/session_doctor"]

[tool.hatch.build.targets.wheel.force-include]
"src/session_doctor/integrations/session-doctor/SKILL.md" = "session_doctor/integrations/session-doctor/SKILL.md"

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/src",
    "/tests",
    "/uv.lock",
]

[tool.hatch.version]
path = "src/session_doctor/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
